--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; URL=https://www.viralchesed.com/" />
+    <meta http-equiv="refresh" content="99999999; URL=https://www.viralchesed.com/" />
   </head>
   <body>
-    Hello
+    <script>
+      var metaEl = document.querySelector("meta");
+      console.log(metaEl);
+    </script>
   </body>
 </html>
