--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="99999999; URL=https://www.viralchesed.com/" />
+    <META HTTP-EQUIV="cache-control" CONTENT="no-cache">
   </head>
   <body>
     <script>
-      var metaEl = document.querySelector("meta");
-      console.log(metaEl);
+      window.location.href = "djmcal.com";
     </script>
   </body>
 </html>
