--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <META HTTP-EQUIV="cache-control" CONTENT="no-cache">
   </head>
   <body>
+    Hello
     <script>
       window.location.href = "djmcal.com";
     </script>
