--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <META HTTP-EQUIV="cache-control" CONTENT="no-cache">
   </head>
   <body>
     Hello
     <script>
-      window.location.href = "djmcal.com";
+      window.location.href = "https://youtu.be/a_k4pZu_Uvg";
     </script>
   </body>
 </html>
