--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     Hello
     <script>
-      window.location.href = "https://youtu.be/a_k4pZu_Uvg";
+      window.location.href = "https://ViralChesed.com"; //"https://youtu.be/a_k4pZu_Uvg";
     </script>
   </body>
 </html>
